--- a/source/fm77av.vcxproj.filters
+++ b/source/fm77av.vcxproj.filters
@@ -142,6 +142,9 @@
     <ClCompile Include="src\vm\fm7\sound.cpp">
       <Filter>Source Files\VM Driver Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\vm\fm7\joystick.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
@@ -251,6 +254,15 @@
     </ClInclude>
     <ClInclude Include="src\res\resource.h">
       <Filter>Resource Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\fm7\joystick.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\fm7\kanjirom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\fm7\keyboard_tables.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
