--- a/source/fm77av.vcxproj
+++ b/source/fm77av.vcxproj
@@ -128,7 +128,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <AdditionalIncludeDirectories>C:\Program Files\Microsoft DirectX SDK %28June 2010%29\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OmitFramePointers>false</OmitFramePointers>
-      <EnableFiberSafeOptimizations>false</EnableFiberSafeOptimizations>
+      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <BufferSecurityCheck>true</BufferSecurityCheck>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
@@ -174,6 +174,7 @@
     <ClCompile Include="src\vm\fm7\fm7.cpp" />
     <ClCompile Include="src\vm\fm7\fm7_mainio.cpp" />
     <ClCompile Include="src\vm\fm7\fm7_mainmem.cpp" />
+    <ClCompile Include="src\vm\fm7\joystick.cpp" />
     <ClCompile Include="src\vm\fm7\kanjirom.cpp" />
     <ClCompile Include="src\vm\fm7\keyboard.cpp" />
     <ClCompile Include="src\vm\fm7\mb61vh010.cpp" />
@@ -213,6 +214,9 @@
     <ClInclude Include="src\vm\fm7\fm7_keyboard.h" />
     <ClInclude Include="src\vm\fm7\fm7_mainio.h" />
     <ClInclude Include="src\vm\fm7\fm7_mainmem.h" />
+    <ClInclude Include="src\vm\fm7\joystick.h" />
+    <ClInclude Include="src\vm\fm7\kanjirom.h" />
+    <ClInclude Include="src\vm\fm7\keyboard_tables.h" />
     <ClInclude Include="src\vm\fm7\mb61vh010.h" />
     <ClInclude Include="src\vm\fmgen\diag.h" />
     <ClInclude Include="src\vm\fmgen\file.h" />
