--- a/source/mz1500.vcxproj
+++ b/source/mz1500.vcxproj
@@ -11,12 +11,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{19644030-FB96-4EE0-8819-86D8D13C25A7}</ProjectGuid>
+    <ProjectGuid>{8553217E-FC51-485D-A64E-FCD644FEA0DB}</ProjectGuid>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v120_xp</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <UseOfMfc>false</UseOfMfc>
     <CharacterSet>MultiByte</CharacterSet>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -58,16 +58,16 @@
       <MkTypLibCompatible>true</MkTypLibCompatible>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Debug/fm7.tlb</TypeLibraryName>
+      <TypeLibraryName>.\Debug/mz1500.tlb</TypeLibraryName>
       <HeaderFileName />
     </Midl>
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_FM7;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_MZ1500;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <PrecompiledHeaderOutputFile>.\Debug/fm7.pch</PrecompiledHeaderOutputFile>
+      <PrecompiledHeaderOutputFile>.\Debug/mz1500.pch</PrecompiledHeaderOutputFile>
       <AssemblerListingLocation>.\Debug/</AssemblerListingLocation>
       <ObjectFileName>.\Debug/</ObjectFileName>
       <ProgramDataBaseFileName>.\Debug/</ProgramDataBaseFileName>
@@ -75,6 +75,7 @@
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <AdditionalIncludeDirectories>C:\Program Files\Microsoft DirectX SDK %28June 2010%29\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -82,60 +83,10 @@
     </ResourceCompile>
     <Link>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;dsound.lib;imm32.lib;vfw32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>.\Debug/fm7.exe</OutputFile>
+      <OutputFile>.\Debug/mz1500.exe</OutputFile>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <ProgramDatabaseFile>.\Debug/fm7.pdb</ProgramDatabaseFile>
-      <SubSystem>Windows</SubSystem>
-      <RandomizedBaseAddress>false</RandomizedBaseAddress>
-      <DataExecutionPrevention />
-      <TargetMachine>MachineX86</TargetMachine>
-    </Link>
-    <Bscmake>
-      <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Debug/fm7.bsc</OutputFile>
-    </Bscmake>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <Midl>
-      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <MkTypLibCompatible>true</MkTypLibCompatible>
-      <SuppressStartupBanner>true</SuppressStartupBanner>
-      <TargetEnvironment>Win32</TargetEnvironment>
-      <TypeLibraryName>.\Release/fm7.tlb</TypeLibraryName>
-      <HeaderFileName />
-    </Midl>
-    <ClCompile>
-      <Optimization>MaxSpeed</Optimization>
-      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_FM7;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <StringPooling>false</StringPooling>
-      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <FunctionLevelLinking>true</FunctionLevelLinking>
-      <PrecompiledHeaderOutputFile>.\Release/fm7.pch</PrecompiledHeaderOutputFile>
-      <AssemblerListingLocation>.\Release/</AssemblerListingLocation>
-      <ObjectFileName>.\Release/</ObjectFileName>
-      <ProgramDataBaseFileName>.\Release/</ProgramDataBaseFileName>
-      <BrowseInformation>true</BrowseInformation>
-      <WarningLevel>Level3</WarningLevel>
-      <SuppressStartupBanner>true</SuppressStartupBanner>
-      <AdditionalIncludeDirectories>C:\Program Files\Microsoft DirectX SDK %28June 2010%29\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
-      <EnableParallelCodeGeneration>true</EnableParallelCodeGeneration>
-      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
-      <IntrinsicFunctions>true</IntrinsicFunctions>
-    </ClCompile>
-    <ResourceCompile>
-      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <Culture>0x0409</Culture>
-    </ResourceCompile>
-    <Link>
-      <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;dsound.lib;imm32.lib;vfw32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <OutputFile>.\Release/fm7.exe</OutputFile>
-      <SuppressStartupBanner>true</SuppressStartupBanner>
-      <ProgramDatabaseFile>.\Release/fm7.pdb</ProgramDatabaseFile>
+      <ProgramDatabaseFile>.\Debug/mz1500.pdb</ProgramDatabaseFile>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
@@ -144,7 +95,58 @@
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <OutputFile>.\Release/fm7.bsc</OutputFile>
+      <OutputFile>.\Debug/mz1500.bsc</OutputFile>
+    </Bscmake>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <Midl>
+      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <MkTypLibCompatible>true</MkTypLibCompatible>
+      <SuppressStartupBanner>true</SuppressStartupBanner>
+      <TargetEnvironment>Win32</TargetEnvironment>
+      <TypeLibraryName>.\Release/mz1500.tlb</TypeLibraryName>
+      <HeaderFileName />
+    </Midl>
+    <ClCompile>
+      <Optimization>MaxSpeed</Optimization>
+      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_MZ1500;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <StringPooling>true</StringPooling>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <PrecompiledHeaderOutputFile>.\Release/mz1500.pch</PrecompiledHeaderOutputFile>
+      <AssemblerListingLocation>.\Release/</AssemblerListingLocation>
+      <ObjectFileName>.\Release/</ObjectFileName>
+      <ProgramDataBaseFileName>.\Release/</ProgramDataBaseFileName>
+      <BrowseInformation>true</BrowseInformation>
+      <WarningLevel>Level3</WarningLevel>
+      <SuppressStartupBanner>true</SuppressStartupBanner>
+      <AdditionalIncludeDirectories>C:\Program Files\Microsoft DirectX SDK %28June 2010%29\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
+      <EnableParallelCodeGeneration>true</EnableParallelCodeGeneration>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+    </ClCompile>
+    <ResourceCompile>
+      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <Culture>0x0409</Culture>
+    </ResourceCompile>
+    <Link>
+      <AdditionalDependencies>odbc32.lib;odbccp32.lib;winmm.lib;dsound.lib;imm32.lib;vfw32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <OutputFile>.\Release/mz1500.exe</OutputFile>
+      <SuppressStartupBanner>true</SuppressStartupBanner>
+      <ProgramDatabaseFile>.\Release/mz1500.pdb</ProgramDatabaseFile>
+      <SubSystem>Windows</SubSystem>
+      <RandomizedBaseAddress>false</RandomizedBaseAddress>
+      <DataExecutionPrevention />
+      <TargetMachine>MachineX86</TargetMachine>
+      <AdditionalLibraryDirectories>C:\Program Files\Microsoft DirectX SDK %28June 2010%29\Lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+    </Link>
+    <Bscmake>
+      <SuppressStartupBanner>true</SuppressStartupBanner>
+      <OutputFile>.\Release/mz1500.bsc</OutputFile>
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -153,28 +155,29 @@
     <ClCompile Include="src\emu.cpp" />
     <ClCompile Include="src\fifo.cpp" />
     <ClCompile Include="src\fileio.cpp" />
+    <ClCompile Include="src\vm\and.cpp" />
     <ClCompile Include="src\vm\datarec.cpp" />
     <ClCompile Include="src\vm\disk.cpp" />
     <ClCompile Include="src\vm\event.cpp" />
-    <ClCompile Include="src\vm\fm7\display.cpp" />
-    <ClCompile Include="src\vm\fm7\floppy.cpp" />
-    <ClCompile Include="src\vm\fm7\fm7.cpp" />
-    <ClCompile Include="src\vm\fm7\fm7_mainio.cpp" />
-    <ClCompile Include="src\vm\fm7\fm7_mainmem.cpp" />
-    <ClCompile Include="src\vm\fm7\joystick.cpp" />
-    <ClCompile Include="src\vm\fm7\kanjirom.cpp" />
-    <ClCompile Include="src\vm\fm7\keyboard.cpp" />
-    <ClCompile Include="src\vm\fm7\sound.cpp" />
-    <ClCompile Include="src\vm\fmgen\fmgen.cpp" />
-    <ClCompile Include="src\vm\fmgen\fmtimer.cpp" />
-    <ClCompile Include="src\vm\fmgen\opna.cpp" />
-    <ClCompile Include="src\vm\fmgen\psg.cpp" />
+    <ClCompile Include="src\vm\i8253.cpp" />
+    <ClCompile Include="src\vm\i8255.cpp" />
+    <ClCompile Include="src\vm\io.cpp" />
     <ClCompile Include="src\vm\mb8877.cpp" />
-    <ClCompile Include="src\vm\mc6809.cpp" />
-    <ClCompile Include="src\vm\memory.cpp" />
+    <ClCompile Include="src\vm\mz700\cmos.cpp" />
+    <ClCompile Include="src\vm\mz700\emm.cpp" />
+    <ClCompile Include="src\vm\mz700\floppy.cpp" />
+    <ClCompile Include="src\vm\mz700\kanji.cpp" />
+    <ClCompile Include="src\vm\mz700\keyboard.cpp" />
+    <ClCompile Include="src\vm\mz700\memory.cpp" />
+    <ClCompile Include="src\vm\mz700\mz700.cpp" />
+    <ClCompile Include="src\vm\mz700\psg.cpp" />
+    <ClCompile Include="src\vm\mz700\quickdisk.cpp" />
+    <ClCompile Include="src\vm\mz700\ramfile.cpp" />
     <ClCompile Include="src\vm\pcm1bit.cpp" />
-    <ClCompile Include="src\vm\ym2203.cpp" />
+    <ClCompile Include="src\vm\sn76489an.cpp" />
     <ClCompile Include="src\vm\z80.cpp" />
+    <ClCompile Include="src\vm\z80pio.cpp" />
+    <ClCompile Include="src\vm\z80sio.cpp" />
     <ClCompile Include="src\win32_debugger.cpp" />
     <ClCompile Include="src\win32_input.cpp" />
     <ClCompile Include="src\win32_screen.cpp" />
@@ -188,41 +191,38 @@
     <ClInclude Include="src\fifo.h" />
     <ClInclude Include="src\fileio.h" />
     <ClInclude Include="src\res\resource.h" />
+    <ClInclude Include="src\vm\and.h" />
     <ClInclude Include="src\vm\datarec.h" />
     <ClInclude Include="src\vm\debugger.h" />
     <ClInclude Include="src\vm\device.h" />
     <ClInclude Include="src\vm\disk.h" />
     <ClInclude Include="src\vm\event.h" />
-    <ClInclude Include="src\vm\fm7\fm7.h" />
-    <ClInclude Include="src\vm\fm7\fm7_common.h" />
-    <ClInclude Include="src\vm\fm7\fm7_dipsw.h" />
-    <ClInclude Include="src\vm\fm7\fm7_display.h" />
-    <ClInclude Include="src\vm\fm7\fm7_keyboard.h" />
-    <ClInclude Include="src\vm\fm7\fm7_mainio.h" />
-    <ClInclude Include="src\vm\fm7\fm7_mainmem.h" />
-    <ClInclude Include="src\vm\fmgen\diag.h" />
-    <ClInclude Include="src\vm\fmgen\file.h" />
-    <ClInclude Include="src\vm\fmgen\fmgen.h" />
-    <ClInclude Include="src\vm\fmgen\fmgeninl.h" />
-    <ClInclude Include="src\vm\fmgen\fmtimer.h" />
-    <ClInclude Include="src\vm\fmgen\headers.h" />
-    <ClInclude Include="src\vm\fmgen\misc.h" />
-    <ClInclude Include="src\vm\fmgen\opna.h" />
-    <ClInclude Include="src\vm\fmgen\psg.h" />
-    <ClInclude Include="src\vm\fmgen\types.h" />
+    <ClInclude Include="src\vm\i8253.h" />
+    <ClInclude Include="src\vm\i8255.h" />
+    <ClInclude Include="src\vm\io.h" />
     <ClInclude Include="src\vm\mb8877.h" />
-    <ClInclude Include="src\vm\mc6809.h" />
-    <ClInclude Include="src\vm\memory.h" />
+    <ClInclude Include="src\vm\mz700\cmos.h" />
+    <ClInclude Include="src\vm\mz700\emm.h" />
+    <ClInclude Include="src\vm\mz700\floppy.h" />
+    <ClInclude Include="src\vm\mz700\kanji.h" />
+    <ClInclude Include="src\vm\mz700\keyboard.h" />
+    <ClInclude Include="src\vm\mz700\memory.h" />
+    <ClInclude Include="src\vm\mz700\mz700.h" />
+    <ClInclude Include="src\vm\mz700\psg.h" />
+    <ClInclude Include="src\vm\mz700\quickdisk.h" />
+    <ClInclude Include="src\vm\mz700\ramfile.h" />
     <ClInclude Include="src\vm\pcm1bit.h" />
+    <ClInclude Include="src\vm\sn76489an.h" />
     <ClInclude Include="src\vm\vm.h" />
-    <ClInclude Include="src\vm\ym2203.h" />
     <ClInclude Include="src\vm\z80.h" />
+    <ClInclude Include="src\vm\z80pio.h" />
+    <ClInclude Include="src\vm\z80sio.h" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="src\res\fm7.ico" />
+    <Image Include="src\res\mz1500.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="src\res\fm7.rc">
+    <ResourceCompile Include="src\res\mz1500.rc">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">src\res;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">src\res;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
