--- a/source/mz1500.vcxproj.filters
+++ b/source/mz1500.vcxproj.filters
@@ -2,46 +2,39 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
-      <UniqueIdentifier>{96ee9a1c-6c97-4471-8896-eb642ba48e0e}</UniqueIdentifier>
+      <UniqueIdentifier>{54cdb508-0d44-4439-82c2-d5d765bb716a}</UniqueIdentifier>
       <Extensions>cpp;c;cxx;rc;def;r;odl;idl;hpj;bat</Extensions>
     </Filter>
     <Filter Include="Source Files\EMU Source Files">
-      <UniqueIdentifier>{25d23430-1587-4399-84d2-7dad19c11032}</UniqueIdentifier>
+      <UniqueIdentifier>{86c70533-f3a6-4416-8ced-c7d981f8cdc9}</UniqueIdentifier>
       <Extensions>cpp</Extensions>
     </Filter>
     <Filter Include="Source Files\VM Common Source Files">
-      <UniqueIdentifier>{0025e7f4-4b84-4bc5-abce-0b85fdfd644a}</UniqueIdentifier>
-      <Extensions>cpp</Extensions>
-    </Filter>
-    <Filter Include="Source Files\VM Common Source Files\fmgen Source Files">
-      <UniqueIdentifier>{7c806de9-b773-4490-9cc0-397e1184d874}</UniqueIdentifier>
+      <UniqueIdentifier>{d15f097f-5422-4cb9-b5c4-be7c6e5e13a5}</UniqueIdentifier>
       <Extensions>cpp</Extensions>
     </Filter>
     <Filter Include="Source Files\VM Driver Source Files">
-      <UniqueIdentifier>{aaec767c-e074-4689-9a4c-597d3db23e5c}</UniqueIdentifier>
+      <UniqueIdentifier>{586c01ff-fa67-477d-ab67-7d3d621ffd4b}</UniqueIdentifier>
       <Extensions>cpp</Extensions>
     </Filter>
     <Filter Include="Header Files">
-      <UniqueIdentifier>{7b9923d9-6312-4a72-97e7-69220378558d}</UniqueIdentifier>
+      <UniqueIdentifier>{4ca1e18e-1ada-4b66-9728-aa53b56e2122}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl</Extensions>
     </Filter>
     <Filter Include="Header Files\EMU Header Files">
-      <UniqueIdentifier>{ce627018-b827-47f9-afb8-984299700873}</UniqueIdentifier>
+      <UniqueIdentifier>{23e88644-f84f-44cb-ad6c-028d61447832}</UniqueIdentifier>
       <Extensions>h</Extensions>
     </Filter>
     <Filter Include="Header Files\VM Common Header Files">
-      <UniqueIdentifier>{297c35bc-4689-4644-9390-b903547a273e}</UniqueIdentifier>
+      <UniqueIdentifier>{4601aec6-0bb9-43b0-a3cf-e7b8b4508823}</UniqueIdentifier>
       <Extensions>h</Extensions>
     </Filter>
-    <Filter Include="Header Files\VM Common Header Files\fmgen Header Files">
-      <UniqueIdentifier>{d7f7d13d-4e98-4715-96f8-8d13efbab0e3}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\VM Driver Header Files">
-      <UniqueIdentifier>{c71b6881-f5bf-482e-a80a-9366eb8ea1b1}</UniqueIdentifier>
+      <UniqueIdentifier>{86aa628f-0846-4afa-b4c3-a556d9688c9e}</UniqueIdentifier>
       <Extensions>h</Extensions>
     </Filter>
     <Filter Include="Resource Files">
-      <UniqueIdentifier>{69af876f-ba4e-4b27-b7c4-39dc01c65d01}</UniqueIdentifier>
+      <UniqueIdentifier>{ae89a512-7fd0-4172-9ac5-0b50c024369d}</UniqueIdentifier>
       <Extensions>ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe</Extensions>
     </Filter>
   </ItemGroup>
@@ -76,6 +69,9 @@
     <ClCompile Include="src\win32_sound.cpp">
       <Filter>Source Files\EMU Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\vm\and.cpp">
+      <Filter>Source Files\VM Common Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="src\vm\datarec.cpp">
       <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
@@ -85,61 +81,61 @@
     <ClCompile Include="src\vm\event.cpp">
       <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\vm\i8253.cpp">
+      <Filter>Source Files\VM Common Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\vm\i8255.cpp">
+      <Filter>Source Files\VM Common Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\vm\io.cpp">
+      <Filter>Source Files\VM Common Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="src\vm\mb8877.cpp">
-      <Filter>Source Files\VM Common Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\vm\mc6809.cpp">
-      <Filter>Source Files\VM Common Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\vm\memory.cpp">
       <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\vm\pcm1bit.cpp">
       <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\ym2203.cpp">
+    <ClCompile Include="src\vm\sn76489an.cpp">
       <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\vm\z80.cpp">
       <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\fmgen\fmgen.cpp">
-      <Filter>Source Files\VM Common Source Files\fmgen Source Files</Filter>
+    <ClCompile Include="src\vm\z80pio.cpp">
+      <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\fmgen\fmtimer.cpp">
-      <Filter>Source Files\VM Common Source Files\fmgen Source Files</Filter>
+    <ClCompile Include="src\vm\z80sio.cpp">
+      <Filter>Source Files\VM Common Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\fmgen\opna.cpp">
-      <Filter>Source Files\VM Common Source Files\fmgen Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\vm\fmgen\psg.cpp">
-      <Filter>Source Files\VM Common Source Files\fmgen Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\vm\fm7\display.cpp">
+    <ClCompile Include="src\vm\mz700\cmos.cpp">
       <Filter>Source Files\VM Driver Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\fm7\floppy.cpp">
+    <ClCompile Include="src\vm\mz700\emm.cpp">
       <Filter>Source Files\VM Driver Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\fm7\fm7.cpp">
+    <ClCompile Include="src\vm\mz700\floppy.cpp">
       <Filter>Source Files\VM Driver Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\fm7\fm7_mainio.cpp">
+    <ClCompile Include="src\vm\mz700\kanji.cpp">
       <Filter>Source Files\VM Driver Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\fm7\fm7_mainmem.cpp">
+    <ClCompile Include="src\vm\mz700\keyboard.cpp">
       <Filter>Source Files\VM Driver Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\fm7\kanjirom.cpp">
+    <ClCompile Include="src\vm\mz700\memory.cpp">
       <Filter>Source Files\VM Driver Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\fm7\keyboard.cpp">
+    <ClCompile Include="src\vm\mz700\mz700.cpp">
       <Filter>Source Files\VM Driver Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\fm7\sound.cpp">
+    <ClCompile Include="src\vm\mz700\psg.cpp">
       <Filter>Source Files\VM Driver Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\vm\fm7\joystick.cpp">
+    <ClCompile Include="src\vm\mz700\quickdisk.cpp">
+      <Filter>Source Files\VM Driver Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\vm\mz700\ramfile.cpp">
       <Filter>Source Files\VM Driver Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -159,6 +155,9 @@
     <ClInclude Include="src\emu.h">
       <Filter>Header Files\EMU Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\vm\and.h">
+      <Filter>Header Files\VM Common Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="src\vm\datarec.h">
       <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
@@ -174,76 +173,64 @@
     <ClInclude Include="src\vm\event.h">
       <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\vm\i8253.h">
+      <Filter>Header Files\VM Common Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\i8255.h">
+      <Filter>Header Files\VM Common Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\io.h">
+      <Filter>Header Files\VM Common Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="src\vm\mb8877.h">
-      <Filter>Header Files\VM Common Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\vm\mc6809.h">
-      <Filter>Header Files\VM Common Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\vm\memory.h">
       <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\vm\pcm1bit.h">
       <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\vm\vm.h">
+    <ClInclude Include="src\vm\sn76489an.h">
       <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\vm\ym2203.h">
+    <ClInclude Include="src\vm\vm.h">
       <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\vm\z80.h">
       <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\vm\fmgen\diag.h">
-      <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
+    <ClInclude Include="src\vm\z80pio.h">
+      <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\vm\fmgen\file.h">
-      <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
+    <ClInclude Include="src\vm\z80sio.h">
+      <Filter>Header Files\VM Common Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\vm\fmgen\fmgen.h">
-      <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\vm\fmgen\fmgeninl.h">
-      <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\vm\fmgen\fmtimer.h">
-      <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\vm\fmgen\headers.h">
-      <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\vm\fmgen\misc.h">
-      <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\vm\fmgen\opna.h">
-      <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\vm\fmgen\psg.h">
-      <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\vm\fmgen\types.h">
-      <Filter>Header Files\VM Common Header Files\fmgen Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\vm\fm7\fm7.h">
+    <ClInclude Include="src\vm\mz700\cmos.h">
       <Filter>Header Files\VM Driver Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\vm\fm7\fm7_common.h">
+    <ClInclude Include="src\vm\mz700\emm.h">
       <Filter>Header Files\VM Driver Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\vm\fm7\fm7_dipsw.h">
+    <ClInclude Include="src\vm\mz700\floppy.h">
       <Filter>Header Files\VM Driver Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\vm\fm7\fm7_display.h">
+    <ClInclude Include="src\vm\mz700\kanji.h">
       <Filter>Header Files\VM Driver Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\vm\fm7\fm7_keyboard.h">
+    <ClInclude Include="src\vm\mz700\keyboard.h">
       <Filter>Header Files\VM Driver Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\vm\fm7\fm7_mainio.h">
+    <ClInclude Include="src\vm\mz700\memory.h">
       <Filter>Header Files\VM Driver Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\vm\fm7\fm7_mainmem.h">
+    <ClInclude Include="src\vm\mz700\mz700.h">
+      <Filter>Header Files\VM Driver Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\mz700\psg.h">
+      <Filter>Header Files\VM Driver Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\mz700\quickdisk.h">
+      <Filter>Header Files\VM Driver Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm\mz700\ramfile.h">
       <Filter>Header Files\VM Driver Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\res\resource.h">
@@ -251,12 +238,12 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="src\res\fm7.ico">
+    <Image Include="src\res\mz1500.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="src\res\fm7.rc">
+    <ResourceCompile Include="src\res\mz1500.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
