[BUILD][CMAKE] Fix miss definition of MZ80K.

--- a/source/build-cmake/mz80k/CMakeLists.txt
+++ b/source/build-cmake/mz80k/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (emumz80k)
 
-set(BUILD_MZ80A ON CACHE BOOL "Build EMU-MZ80K")
+set(BUILD_MZ80K ON CACHE BOOL "Build EMU-MZ80K")
 include(config_mz80)
 
 add_subdirectory(../../src/vm/mz80k vm/mz80)
