[WIN32] Separate definition of menu  order from res/resources.h to machine_res.h,resources.h is  overwritten from Visual Studio 2013 when changes menu item.

--- a/source/fm77av.vcxproj.filters
+++ b/source/fm77av.vcxproj.filters
@@ -264,6 +264,9 @@
     <ClInclude Include="src\vm\fm7\keyboard_tables.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\res\machine_res.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="src\res\fm77av.ico">
