--- a/source/fm7.vcxproj.filters
+++ b/source/fm7.vcxproj.filters
@@ -249,6 +249,9 @@
     <ClInclude Include="src\res\resource.h">
       <Filter>Resource Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\res\machine_res.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="src\res\fm7.ico">
