--- a/source/msx2.vcxproj.filters
+++ b/source/msx2.vcxproj.filters
@@ -243,6 +243,9 @@
     <ClInclude Include="src\res\resource.h">
       <Filter>Resource Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\res\machine_res.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="src\res\msx2.ico">
