--- a/source/mz1500.vcxproj.filters
+++ b/source/mz1500.vcxproj.filters
@@ -236,6 +236,9 @@
     <ClInclude Include="src\res\resource.h">
       <Filter>Resource Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\res\machine_res.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="src\res\mz1500.ico">
