--- a/source/pc8801ma.vcxproj.filters
+++ b/source/pc8801ma.vcxproj.filters
@@ -225,6 +225,9 @@
     <ClInclude Include="src\res\resource.h">
       <Filter>Resource Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\res\machine_res.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="src\res\pc8801ma.ico">
