[BUILD][WIN32][FM7] Add "HOT Reset" entry.

--- a/source/src/res/fm77av.rc
+++ b/source/src/res/fm77av.rc
@@ -76,6 +76,7 @@ BEGIN
     POPUP "Control"
     BEGIN
         MENUITEM "Reset",                       ID_RESET
+        MENUITEM "HOT Reset",                   ID_SPECIAL_RESET
         MENUITEM SEPARATOR
         MENUITEM "BASIC",                       ID_BOOT_MODE0
         MENUITEM "DOS",                         ID_BOOT_MODE1
