[Qt][Network] Initial: Set *dummy* networking code, pass to build emumz2500.

--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -8,8 +8,7 @@ set(s_qt_common_headers
 
 QT4_WRAP_CPP(s_qt_common_headers_MOC ${s_qt_common_headers})
 
-add_executable(${EXEC_TARGET}
-	  emuevents_control.cpp
+set(QT_COMMON_BASE  emuevents_control.cpp
 	  emu_utils.cpp
 	  qt_gldraw.cpp
 	  qt_glutil.cpp
@@ -21,6 +20,14 @@ add_executable(${EXEC_TARGET}
 	  sdl_sound.cpp
 	  emu_input.cpp
 	  sdl_cpuid.c
+)
+
+if(USE_SOCKET)
+  set(QT_COMMON_BASE ${QT_COMMON_BASE} qt_socket.cpp)
+endif()
+
+add_executable(${EXEC_TARGET}
+	  ${QT_COMMON_BASE}
 	  ${s_qt_common_headers_MOC}
 )
 
