--- a/source/src/qt/hc20/CMakeLists.txt
+++ b/source/src/qt/hc20/CMakeLists.txt
@@ -3,7 +3,11 @@ message("* qt/hc20")
 set(s_qt_hc20_headers
 	  menuclasses.h
 )
-QT4_WRAP_CPP(s_qt_hc20_headers_MOC ${s_qt_hc20_headers})
+if(USE_QT_5)
+  QT5_WRAP_CPP(s_qt_hc20_headers_MOC ${s_qt_hc20_headers})
+else()
+  QT4_WRAP_CPP(s_qt_hc20_headers_MOC ${s_qt_hc20_headers})
+endif()
 
 add_library(qt_hc20
 	  MainWindow.cpp
