--- a/source/src/qt/fm7/CMakeLists.txt
+++ b/source/src/qt/fm7/CMakeLists.txt
@@ -3,7 +3,12 @@ message("* qt/fm7")
 set(s_qt_fm7_headers
 	  menuclasses.h
 )
-QT4_WRAP_CPP(s_qt_fm7_headers_MOC ${s_qt_fm7_headers})
+
+if(USE_QT_5)
+  QT5_WRAP_CPP(s_qt_fm7_headers_MOC ${s_qt_fm7_headers})
+else()
+  QT4_WRAP_CPP(s_qt_fm7_headers_MOC ${s_qt_fm7_headers})
+endif()
 
 add_library(qt_fm7
 	  MainWindow.cpp
