--- a/source/src/qt/gamegear/CMakeLists.txt
+++ b/source/src/qt/gamegear/CMakeLists.txt
@@ -2,9 +2,14 @@ message("* qt/gamegear")
 
 set(s_qt_sms_headers
 	  menuclasses.h
-)
-QT4_WRAP_CPP(s_qt_sms_headers_MOC ${s_qt_sms_headers})
+	  )
 
+if(USE_QT_5)
+  QT5_WRAP_CPP(s_qt_sms_headers_MOC ${s_qt_sms_headers})
+else()
+  QT4_WRAP_CPP(s_qt_sms_headers_MOC ${s_qt_sms_headers})
+endif()
+  
 add_library(qt_sms
 	  MainWindow.cpp
 	  ${s_qt_sms_headers_MOC}
