--- a/source/src/qt/hc40/CMakeLists.txt
+++ b/source/src/qt/hc40/CMakeLists.txt
@@ -3,7 +3,11 @@ message("* qt/hc40")
 set(s_qt_hc40_headers
 	  menuclasses.h
 )
-QT4_WRAP_CPP(s_qt_hc40_headers_MOC ${s_qt_hc40_headers})
+if(USE_QT_5)
+  QT5_WRAP_CPP(s_qt_hc40_headers_MOC ${s_qt_hc40_headers})
+else()
+  QT4_WRAP_CPP(s_qt_hc40_headers_MOC ${s_qt_hc40_headers})
+endif()
 
 add_library(qt_hc40
 	  MainWindow.cpp
