[Build][Qt5] Apply Qt5 to another emulators.

--- a/source/src/qt/mz700/CMakeLists.txt
+++ b/source/src/qt/mz700/CMakeLists.txt
@@ -3,7 +3,11 @@ message("* qt/mz700")
 set(s_qt_mz700_headers
 	  menuclasses.h
 )
-QT4_WRAP_CPP(s_qt_mz700_headers_MOC ${s_qt_mz700_headers})
+if(USE_QT_5)
+  QT5_WRAP_CPP(s_qt_mz700_headers_MOC ${s_qt_mz700_headers})
+else()
+  QT4_WRAP_CPP(s_qt_mz700_headers_MOC ${s_qt_mz700_headers})
+endif()
 
 add_library(qt_mz700
 	  MainWindow.cpp
