--- a/source/src/qt/x1turboz/CMakeLists.txt
+++ b/source/src/qt/x1turboz/CMakeLists.txt
@@ -3,8 +3,11 @@ message("* qt/x1turboz")
 set(s_qt_x1turboz_headers
 	  menuclasses.h
 )
-QT4_WRAP_CPP(s_qt_x1turboz_headers_MOC ${s_qt_x1turboz_headers})
-
+if(USE_QT_5)
+  QT5_WRAP_CPP(s_qt_x1turboz_headers_MOC ${s_qt_x1turboz_headers})
+else()
+  QT4_WRAP_CPP(s_qt_x1turboz_headers_MOC ${s_qt_x1turboz_headers})
+endif()
 add_library(qt_x1turboz
 	  MainWindow.cpp
 	  ${s_qt_x1turboz_headers_MOC}
