[Qt][UI] Enable icons for main window.

--- a/source/build-cmake/fp1100/CMakeLists.txt
+++ b/source/build-cmake/fp1100/CMakeLists.txt
@@ -62,6 +62,7 @@ add_definitions(-D_CONFIGURE_WITH_CMAKE)
 
   set(EXEC_TARGET emufp1100)
   add_definitions(-D_FP1100)
+  set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/fp1100.qrc)
 
 if(USE_CMT_SOUND)
   add_definitions(-DDATAREC_SOUND)
