--- a/source/src/qt/fm7/CMakeLists.txt
+++ b/source/src/qt/fm7/CMakeLists.txt
@@ -6,6 +6,7 @@ set(s_qt_fm7_headers
 
 if(USE_QT_5)
   QT5_WRAP_CPP(s_qt_fm7_headers_MOC ${s_qt_fm7_headers})
+#  QT5_ADD_RESOURCES(s_qt_fm7_headers_RCC ${RESOURCE})
 else()
   QT4_WRAP_CPP(s_qt_fm7_headers_MOC ${s_qt_fm7_headers})
 endif()
