--- a/source/build-cmake/hc20/CMakeLists.txt
+++ b/source/build-cmake/hc20/CMakeLists.txt
@@ -60,6 +60,7 @@ set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.
 
 set(VMFILES ${VMFILES_HC20})
 add_definitions(-D_HC20)
+set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/hc20.qrc)
 
 
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
