--- a/source/build-cmake/hc40/CMakeLists.txt
+++ b/source/build-cmake/hc40/CMakeLists.txt
@@ -50,6 +50,7 @@ set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.
 
 set(VMFILES ${VMFILES_HC40})
 add_definitions(-D_HC40)
+set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/hc40.qrc)
 
 
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
