--- a/source/build-cmake/msx2/CMakeLists.txt
+++ b/source/build-cmake/msx2/CMakeLists.txt
@@ -82,12 +82,15 @@ set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.
 if(BUILD_PX7)
   set(VMFILES ${VMFILES_PX7})
   add_definitions(-D_PX7)
+  set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/px7.qrc)
 elseif(BUILD_MSX2)
   set(VMFILES ${VMFILES_MSX2})
   add_definitions(-D_MSX2)
+  set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/msx2.qrc)
 else()
   set(VMFILES ${VMFILES_MSX1})
   add_definitions(-D_MSX1)
+  set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/msx1.qrc)
 endif()
 
 add_definitions(-DDATAREC_SOUND)
