--- a/source/build-cmake/tk80bs/CMakeLists.txt
+++ b/source/build-cmake/tk80bs/CMakeLists.txt
@@ -53,6 +53,7 @@ set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.
 set(VMFILES ${VMFILES_BASE})
 add_definitions(-D_TK80BS)
 set(EXEC_TARGET emutk80bs)
+set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/tk80bs.qrc)
 
 #include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/tk80bs)
