[Qt] Fix OOPs on PC-8801MA/PC-8001mk2 SR.

--- a/source/build-cmake/pc8801ma/CMakeLists.txt
+++ b/source/build-cmake/pc8801ma/CMakeLists.txt
@@ -74,8 +74,8 @@ add_definitions(-D_CONFIGURE_WITH_CMAKE)
 if(BUILD_PC8001SR)
   set(EXEC_TARGET emupc8001sr)
   add_definitions(-D_PC8001SR)
-  set(VMFILES ${VMFILES}
-  )
+  set(VMFILES ${VMFILES}  )
+  set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/pc8001mk2sr.qrc)
   
 elseif(BUILD_PC8801MA)
   set(EXEC_TARGET emupc8801ma)
@@ -83,6 +83,7 @@ elseif(BUILD_PC8801MA)
   set(VMFILES ${VMFILES}
               upd1990a.cpp
   )
+  set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/pc8801ma.qrc)
 endif()
 
 add_definitions(-DPC88_EXRAM_BANKS=${PC88_EXTRAM_PAGES})
